# SplineLib

./: .clang-tidy  .codecov.yml  .gitignore  .oclint  .travis.yml  CMakeLists.txt  CPPLINT.cfg  README.md  StyleGuide.md
example/: CMakeLists.txt  \  ex1.cc  iga.cc  io_conversion.cc  log.txt  main.cc  testcase_optimizer.cc
example/iga/: CMakeLists.txt
src/: CMakeLists.txt  b_spline.cc  b_spline.h  b_spline_2_d.cc  b_spline_2_d.h  b_spline_basis_function.cc  b_spline_basis_function.h  basis_function.cc  basis_function.h  basis_function_factory.cc  basis_function_factory.h  control_point.cc  control_point.h  definitions.h  element.cc  element.h  element_generator.cc  element_generator.h  four_point_gauss_legendre.h  integration_point.h  integration_rule.h  integration_rule_1_point.cc  integration_rule_1_point.h  integration_rule_2_points.cc  integration_rule_2_points.h  integration_rule_3_points.cc  integration_rule_3_points.h  integration_rule_4_points.cc  integration_rule_4_points.h  integration_rule_5_points.cc  integration_rule_5_points.h  knot_vector.cc  knot_vector.h  multi_index_handler.h  numeric_settings.h  one_dimensional_integration_rule.cc  one_dimensional_integration_rule.h  one_point_gauss_legendre.h  parameter_space.cc  parameter_space.h  (+5 more)
src/baf/: CMakeLists.txt  alias.h  b_spline_basis_function.cc  b_spline_basis_function.h  b_spline_basis_funtion.inc  basis_function.cc  basis_function.h  basis_function_factory.cc  basis_function_factory.h  basis_function_handler.cc  control_point.cc  control_point.h  knot_vector.cc  knot_vector.h  knot_vector.inc  non_zero_degree_b_spline_basis_function.cc  non_zero_degree_b_spline_basis_function.h  non_zero_degree_b_spline_basis_function.inc  zero_degree_b_spline_basis_function.cc  zero_degree_b_spline_basis_function.h  zero_degree_b_spline_basis_function.inc
src/elm/: CMakeLists.txt  element.cc  element.h  element_generator.cc  element_generator.h  element_integration_point.cc  element_integration_point.h
src/iga/: CMakeLists.txt  basis_function_handler.cc  basis_function_handler.h  bdf_handler.h  connectivity_handler.cc  connectivity_handler.h  element_generator_iga.cc  element_generator_iga.h  element_iga.cc  element_iga.h  element_integral_calculator.cc  element_integral_calculator.h  element_integration_point_iga.cc  element_integration_point_iga.h  five_point_gauss_legendre_iga.h  four_point_gauss_legendre_iga.h  integration_point_iga.h  integration_rule_iga.h  linear_equation_assembler.cc  linear_equation_assembler.h  mapping_handler.cc  mapping_handler.h  matrix.h  matrix_utils.h  one_point_gauss_legendre_iga.h  poisson_problem.h  solution_spline.cc  solution_spline.h  solution_vtk_writer.cc  solution_vtk_writer.h  three_point_gauss_legendre_iga.h  two_point_gauss_legendre_iga.h
src/io/: CMakeLists.txt  converter_log.cc  converter_log.h  iges_reader.cc  iges_reader.h  iges_to_irit.cc  iges_to_vtk.cc  iges_to_xml.cc  iges_writer.cc  iges_writer.h  io_converter.cc  io_converter.h  irit_reader.cc  irit_reader.h  irit_reader_utils.h  irit_to_iges.cc  irit_to_vtk.cc  irit_to_xml.cc  irit_utils.h  irit_writer.cc  irit_writer.h  irit_writer_utils.h  reader.cc  reader.h  vtk_writer.cc  vtk_writer.h  vtk_writer_utils.h  writer.cc  writer.h  xml_reader.cc  xml_reader.h  xml_reader_utils.h  xml_to_iges.cc  xml_to_irit.cc  xml_to_vtk.cc  xml_utils.h  xml_writer.cc  xml_writer.h  xml_writer_b_spline.h  xml_writer_nurbs.h  (+2 more)
src/itg/: CMakeLists.txt  five_point_gauss_legendre.h  four_point_gauss_legendre.h  integration_point.h  integration_rule.h  one_point_gauss_legendre.h  three_point_gauss_legendre.h  two_point_gauss_legendre.h
src/spl/: CMakeLists.txt  XMLGenerator_B_Spline.h  XMLGenerator_Spline.h  alias.h  b_spline.h  b_spline_generator.cc  b_spline_generator.h  bezier_segment.h  control_point.cc  control_point.h  control_point.inc  iges_1d_bspline_generator.h  iges_1d_nurbs_generator.h  iges_2d_bspline_generator.h  iges_2d_nurbs_generator.h  iges_bspline_generator.h  iges_nurbs_generator.h  iges_spline_generator.h  nurbs.h  nurbs_generator.h  parameter_space.cc  parameter_space.h  physical_space.h  physical_space.inc  projection.h  random_b_spline_generator.h  random_nurbs_generator.h  random_spline_utils.h  spline.h  spline_generator.h  square_generator.cc  square_generator.h  surface_generator.cc  surface_generator.h  weighted_physical_space.h  weighted_physical_space.inc  xml_generator_b_spline.h  xml_generator_nurbs.h  xml_generator_spline.h
src/util/: CMakeLists.txt  any_casts.cc  any_casts.h  any_casts.inc  element.h  element_generator.h  iges_reader.h  multi_index_handler.h  multi_index_handler.inc  named_type.h  named_type.inc  numeric_operations.h  numeric_operations.inc  numeric_settings.h  numeric_settings.inc  random.h  random.inc  stl_container_access.h  stl_container_access.inc  string_operations.cc  string_operations.h  string_operations.inc  system_operations.cc  system_operations.h  vector_utils.h  vector_utils.inc
test/: .clang-tidy  2d_b_spline_mocking.h  2d_b_spline_test.cc  2d_nurbs_mocking.h  3d_nurbs_mocking.h  CMakeLists.txt  CPPLINT.cfg  acceptance_tests.cc  b_spline_basis_function_test.cc  b_spline_test.cc  basis_function_factory.cc  config.in.h  control_point_test.cc  element_integration_point_test.cc  element_test.cc  example_test.cc  iga_test.cc  iges_reader_test.cc  iges_reader_writer_test.cc  iges_writer_test.cc  integration_point_test.cc  integration_rule_test.cc  io_converter.cc  io_converter_test.cc  irit_io_1_d_test.cc  irit_io_1d_test.cpp  irit_io_2_d_test.cc  irit_io_2d_test.cpp  irit_io_3_d_test.cc  irit_io_3d_test.cpp  irit_io_test.cc  irit_reader_test.cc  irit_reader_writer_test.cc  irit_writer_test.cc  knot_vector_test.cc  mock_knot_vector.cc  multihandler_test.cc  nurbs_2_d_test.cc  nurbs_3_d_test.cc  nurbs_test.cc  (+21 more)
test/baf/: CMakeLists.txt  b_spline_basis_function_test.cc  basis_function_factory.cc  basis_function_factory_test.cc  control_point_test.cc  knot_vector_test.cc  non_zero_degree_b_spline_basis_function_test.cc  zero_degree_b_spline_basis_function_test.cc
(+233 files in other folders)
